# rust-backend-template

./: Cargo.toml  README.md  diesel.toml
migrations/2025-07-08-183022_weather/: down.sql  up.sql
src/: db.rs  error.rs  lib.rs  main.rs  schema.rs
src/weather/: dtos.rs  mod.rs  models.rs  router.rs
